--- a/Supervised Machine Learning-Classification/03d_LAB_Decision_Trees.ipynb
+++ b/Supervised Machine Learning-Classification/03d_LAB_Decision_Trees.ipynb
@@ -1141,6 +1141,26 @@
     "---\n",
     "### Machine Learning Foundation (C) 2020 IBM Corporation"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary/Review\n",
+    "\n",
+    "Decision trees split your data using impurity measures. They are a greedy algorithm and are not based on statistical assumptions.\n",
+    "\n",
+    "The most common splitting impurity measures are Entropy and Gini index.Decision trees tend to overfit and to be very sensitive to different data.\n",
+    "\n",
+    "Cross validation and pruning sometimes help with some of this.\n",
+    "\n",
+    "Great advantages of decision trees are that they are really easy to interpret and require no data preprocessing.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
