--- a/Unsupervised Machine Learning/Final Assignment/Clustering Unsupervised Assignment.ipynb
+++ b/Unsupervised Machine Learning/Final Assignment/Clustering Unsupervised Assignment.ipynb
@@ -51,24 +51,24 @@
     "\n",
     "| Variable Name | Description |\n",
     "| --- | --- |\n",
-    "CUSTID | Identification of Credit Card holder (Categorical)\n",
-    "BALANCE | Balance amount left in their account to make purchases |\n",
-    "BALANCEFREQUENCY | How frequently the Balance is updated, score between 0 and 1 (1 = frequently updated, 0 = not frequently updated) |\n",
-    "PURCHASES | Amount of purchases made from account |\n",
-    "ONEOFFPURCHASES | Maximum purchase amount done in one-go |\n",
-    "INSTALLMENTSPURCHASES | Amount of purchase done in installment |\n",
-    "CASHADVANCE | Cash in advance given by the user |\n",
-    "PURCHASESFREQUENCY | How frequently the Purchases are being made, score between 0 and 1 (1 = frequently purchased, 0 = not frequently purchased) |\n",
-    "ONEOFFPURCHASESFREQUENCY | How frequently Purchases are happening in one-go (1 = frequently purchased, 0 = not frequently purchased) |\n",
-    "PURCHASESINSTALLMENTSFREQUENCY | How frequently purchases in installments are being done (1 = frequently done, 0 = not frequently done) |\n",
-    "CASHADVANCEFREQUENCY | How frequently the cash in advance being paid |\n",
-    "CASHADVANCETRX | Number of Transactions made with \"Cash in Advanced\" |\n",
-    "PURCHASESTRX | Numbe of purchase transactions made |\n",
-    "CREDITLIMIT | Limit of Credit Card for user |\n",
-    "PAYMENTS | Amount of Payment done by user |\n",
-    "MINIMUM_PAYMENTS | Minimum amount of payments made by user |\n",
-    "PRCFULLPAYMENT | Percent of full payment paid by user |\n",
-    "TENURE | Tenure of credit card service for user |"
+    "| CUSTID | Identification of Credit Card holder (Categorical)\n",
+    "| BALANCE | Balance amount left in their account to make purchases |\n",
+    "| BALANCEFREQUENCY | How frequently the Balance is updated, score between 0 and 1 (1 = frequently updated, 0 = not frequently updated) |\n",
+    "| PURCHASES | Amount of purchases made from account |\n",
+    "| ONEOFFPURCHASES | Maximum purchase amount done in one-go |\n",
+    "| INSTALLMENTSPURCHASES | Amount of purchase done in installment |\n",
+    "| CASHADVANCE | Cash in advance given by the user |\n",
+    "| PURCHASESFREQUENCY | How frequently the Purchases are being made, score between 0 and 1 (1 = frequently purchased, 0 = not frequently purchased) |\n",
+    "| ONEOFFPURCHASESFREQUENCY | How frequently Purchases are happening in one-go (1 = frequently purchased, 0 = not frequently purchased) |\n",
+    "| PURCHASESINSTALLMENTSFREQUENCY | How frequently purchases in installments are being done (1 = frequently done, 0 = not frequently done) |\n",
+    "| CASHADVANCEFREQUENCY | How frequently the cash in advance being paid |\n",
+    "| CASHADVANCETRX | Number of Transactions made with \"Cash in Advanced\" |\n",
+    "| PURCHASESTRX | Numbe of purchase transactions made |\n",
+    "| CREDITLIMIT | Limit of Credit Card for user |\n",
+    "| PAYMENTS | Amount of Payment done by user |\n",
+    "| MINIMUM_PAYMENTS | Minimum amount of payments made by user |\n",
+    "| PRCFULLPAYMENT | Percent of full payment paid by user |\n",
+    "| TENURE | Tenure of credit card service for user |"
    ]
   },
   {
