--- a/Deep Learning and Reinforcement Learning/Week 4/05g_DEMO_RNN.ipynb
+++ b/Deep Learning and Reinforcement Learning/Week 4/05g_DEMO_RNN.ipynb
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "GZYEYttZ8OSE"
       },
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "Z7VKmsvZ8OSG"
       },
@@ -70,13 +70,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
-        "id": "V1VavKuX8OSH",
-        "outputId": "cc383b2b-4245-4a2e-ef58-9009340c226f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "V1VavKuX8OSH",
+        "outputId": "2bf9c23f-2391-4350-f175-5c46890590e8"
       },
       "outputs": [
         {
@@ -100,13 +100,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
-        "id": "vYAAzJh58OSI",
-        "outputId": "120811c6-548d-4f5b-aaf8-16a51d894e7a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vYAAzJh58OSI",
+        "outputId": "fc7e330f-7c79-420b-d9d1-32249a030ebf"
       },
       "outputs": [
         {
@@ -128,13 +128,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {
-        "id": "6OGl8MRk8OSJ",
-        "outputId": "7847ee48-a9c1-48e6-e173-51d7e66fb91a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6OGl8MRk8OSJ",
+        "outputId": "078ea5fe-65ea-498b-9483-7bd5e81ad464"
       },
       "outputs": [
         {
@@ -148,7 +148,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 6
         }
       ],
       "source": [
@@ -187,7 +187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {
         "id": "kJloNjsR8OSK"
       },
@@ -210,13 +210,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {
-        "id": "e35WYgfH8OSL",
-        "outputId": "92b178ec-f9cc-4cb4-d192-a71bc8b57fcd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "e35WYgfH8OSL",
+        "outputId": "affea8b4-ed04-4d13-86a2-ae5326d2ba59"
       },
       "outputs": [
         {
@@ -248,13 +248,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {
-        "id": "6D1iukE78OSM",
-        "outputId": "6ca45859-6288-44cf-8a15-d402640e1236",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6D1iukE78OSM",
+        "outputId": "20c8fc40-2e1c-48a5-8558-b3d491c27758"
       },
       "outputs": [
         {
@@ -276,13 +276,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 10,
       "metadata": {
-        "id": "D4szhkfU8OSM",
-        "outputId": "7ca30d54-21fb-41d3-cff4-9ee73e61197a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "D4szhkfU8OSM",
+        "outputId": "c2fff41d-c499-4995-c9ec-38435469668c"
       },
       "outputs": [
         {
@@ -290,36 +290,36 @@
           "name": "stdout",
           "text": [
             "Epoch 1/10\n",
-            "782/782 [==============================] - 31s 35ms/step - loss: 0.6577 - accuracy: 0.6221 - val_loss: 0.6021 - val_accuracy: 0.6814\n",
+            "782/782 [==============================] - 30s 33ms/step - loss: 0.6725 - accuracy: 0.5510 - val_loss: 0.6425 - val_accuracy: 0.6228\n",
             "Epoch 2/10\n",
-            "782/782 [==============================] - 25s 32ms/step - loss: 0.5556 - accuracy: 0.7163 - val_loss: 0.5452 - val_accuracy: 0.7208\n",
+            "782/782 [==============================] - 25s 33ms/step - loss: 0.6186 - accuracy: 0.6986 - val_loss: 0.6133 - val_accuracy: 0.7366\n",
             "Epoch 3/10\n",
-            "782/782 [==============================] - 25s 32ms/step - loss: 0.4973 - accuracy: 0.7600 - val_loss: 0.5139 - val_accuracy: 0.7419\n",
+            "782/782 [==============================] - 25s 32ms/step - loss: 0.5900 - accuracy: 0.7448 - val_loss: 0.5964 - val_accuracy: 0.7214\n",
             "Epoch 4/10\n",
-            "782/782 [==============================] - 27s 35ms/step - loss: 0.4587 - accuracy: 0.7863 - val_loss: 0.4901 - val_accuracy: 0.7558\n",
+            "782/782 [==============================] - 25s 32ms/step - loss: 0.5686 - accuracy: 0.7669 - val_loss: 0.5825 - val_accuracy: 0.7350\n",
             "Epoch 5/10\n",
-            "782/782 [==============================] - 27s 35ms/step - loss: 0.4295 - accuracy: 0.8024 - val_loss: 0.4744 - val_accuracy: 0.7653\n",
+            "782/782 [==============================] - 25s 33ms/step - loss: 0.5496 - accuracy: 0.7796 - val_loss: 0.5699 - val_accuracy: 0.7404\n",
             "Epoch 6/10\n",
-            "782/782 [==============================] - 26s 33ms/step - loss: 0.4080 - accuracy: 0.8134 - val_loss: 0.4636 - val_accuracy: 0.7742\n",
+            "782/782 [==============================] - 25s 32ms/step - loss: 0.5332 - accuracy: 0.7902 - val_loss: 0.5545 - val_accuracy: 0.7556\n",
             "Epoch 7/10\n",
-            "782/782 [==============================] - 25s 32ms/step - loss: 0.3919 - accuracy: 0.8248 - val_loss: 0.4568 - val_accuracy: 0.7786\n",
+            "782/782 [==============================] - 26s 33ms/step - loss: 0.5186 - accuracy: 0.7982 - val_loss: 0.5487 - val_accuracy: 0.7537\n",
             "Epoch 8/10\n",
-            "782/782 [==============================] - 25s 32ms/step - loss: 0.3796 - accuracy: 0.8313 - val_loss: 0.4526 - val_accuracy: 0.7833\n",
+            "782/782 [==============================] - 26s 34ms/step - loss: 0.5052 - accuracy: 0.8065 - val_loss: 0.5365 - val_accuracy: 0.7655\n",
             "Epoch 9/10\n",
-            "782/782 [==============================] - 25s 32ms/step - loss: 0.3702 - accuracy: 0.8356 - val_loss: 0.4513 - val_accuracy: 0.7855\n",
+            "782/782 [==============================] - 26s 33ms/step - loss: 0.4933 - accuracy: 0.8114 - val_loss: 0.5269 - val_accuracy: 0.7694\n",
             "Epoch 10/10\n",
-            "782/782 [==============================] - 28s 35ms/step - loss: 0.3626 - accuracy: 0.8404 - val_loss: 0.4511 - val_accuracy: 0.7884\n"
+            "782/782 [==============================] - 25s 32ms/step - loss: 0.4820 - accuracy: 0.8162 - val_loss: 0.5188 - val_accuracy: 0.7741\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f4a3f1f8690>"
+              "<keras.callbacks.History at 0x7f0691a99850>"
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 10
         }
       ],
       "source": [
@@ -333,20 +333,20 @@
       "cell_type": "code",
       "execution_count": 11,
       "metadata": {
-        "id": "kBWyAb9y8OSN",
-        "outputId": "1c65596b-b667-4b2b-a3b0-f1aaf88c2508",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kBWyAb9y8OSN",
+        "outputId": "bc668977-929d-46b2-bb53-0298050485e2"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "782/782 [==============================] - 4s 4ms/step - loss: 0.4511 - accuracy: 0.7884\n",
-            "Test score: 0.45114976167678833\n",
-            "Test accuracy: 0.7883599996566772\n"
+            "782/782 [==============================] - 3s 4ms/step - loss: 0.5188 - accuracy: 0.7741\n",
+            "Test score: 0.5188170075416565\n",
+            "Test accuracy: 0.7740799784660339\n"
           ]
         }
       ],
@@ -413,11 +413,11 @@
       "cell_type": "code",
       "execution_count": 14,
       "metadata": {
-        "id": "WRLa_Cax8OSP",
-        "outputId": "4cfa927c-f163-42d5-c729-592e9a56fd6d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WRLa_Cax8OSP",
+        "outputId": "30094fae-4558-4bb1-b3bb-017b6913ee83"
       },
       "outputs": [
         {
@@ -439,13 +439,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
-        "id": "Riy7karo8OSP",
-        "outputId": "029aedb3-2190-4ba5-bd73-9ea3efd3c65d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Riy7karo8OSP",
+        "outputId": "c8c577cb-fc2e-48a6-eeb0-5ef96012bfce"
       },
       "outputs": [
         {
@@ -453,10 +453,36 @@
           "name": "stdout",
           "text": [
             "Epoch 1/10\n",
-            "782/782 [==============================] - 67s 84ms/step - loss: 0.6120 - accuracy: 0.6639 - val_loss: 0.5386 - val_accuracy: 0.7246\n",
+            "782/782 [==============================] - 63s 79ms/step - loss: 0.5989 - accuracy: 0.6669 - val_loss: 0.5112 - val_accuracy: 0.7454\n",
             "Epoch 2/10\n",
-            "610/782 [======================>.......] - ETA: 12s - loss: 0.4732 - accuracy: 0.7757"
+            "782/782 [==============================] - 61s 78ms/step - loss: 0.4418 - accuracy: 0.7961 - val_loss: 0.4446 - val_accuracy: 0.7900\n",
+            "Epoch 3/10\n",
+            "782/782 [==============================] - 61s 78ms/step - loss: 0.3731 - accuracy: 0.8374 - val_loss: 0.3992 - val_accuracy: 0.8198\n",
+            "Epoch 4/10\n",
+            "782/782 [==============================] - 62s 79ms/step - loss: 0.3322 - accuracy: 0.8595 - val_loss: 0.3921 - val_accuracy: 0.8242\n",
+            "Epoch 5/10\n",
+            "782/782 [==============================] - 61s 78ms/step - loss: 0.3056 - accuracy: 0.8734 - val_loss: 0.3720 - val_accuracy: 0.8327\n",
+            "Epoch 6/10\n",
+            "782/782 [==============================] - 66s 84ms/step - loss: 0.2868 - accuracy: 0.8808 - val_loss: 0.3648 - val_accuracy: 0.8385\n",
+            "Epoch 7/10\n",
+            "782/782 [==============================] - 60s 77ms/step - loss: 0.2729 - accuracy: 0.8870 - val_loss: 0.3704 - val_accuracy: 0.8362\n",
+            "Epoch 8/10\n",
+            "782/782 [==============================] - 66s 85ms/step - loss: 0.2624 - accuracy: 0.8938 - val_loss: 0.3648 - val_accuracy: 0.8397\n",
+            "Epoch 9/10\n",
+            "782/782 [==============================] - 61s 77ms/step - loss: 0.2530 - accuracy: 0.8981 - val_loss: 0.3693 - val_accuracy: 0.8400\n",
+            "Epoch 10/10\n",
+            "782/782 [==============================] - 61s 78ms/step - loss: 0.2453 - accuracy: 0.9008 - val_loss: 0.3634 - val_accuracy: 0.8419\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f0689683150>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
         }
       ],
       "source": [
@@ -468,7 +494,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "nFMYEiOR8OSP"
       },
@@ -485,7 +511,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "uohnFYJz8OSQ"
       },
@@ -506,11 +532,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
-        "id": "NC8fLvAl8OSQ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NC8fLvAl8OSQ",
+        "outputId": "1d7cb46e-4cdb-4d42-b907-d08f71542fa3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/keras/optimizer_v2/rmsprop.py:130: UserWarning: The `lr` argument is deprecated, use `learning_rate` instead.\n",
+            "  super(RMSprop, self).__init__(name, **kwargs)\n"
+          ]
+        }
+      ],
       "source": [
         "rmsprop = keras.optimizers.RMSprop(lr = .0001)\n",
         "\n",
@@ -521,11 +560,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
-        "id": "KebDfiNB8OSR"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KebDfiNB8OSR",
+        "outputId": "6361d251-885d-404a-a0fc-3cef68e474d4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "782/782 [==============================] - 65s 83ms/step - loss: 0.6470 - accuracy: 0.6217 - val_loss: 0.5749 - val_accuracy: 0.7127\n",
+            "Epoch 2/10\n",
+            "782/782 [==============================] - 64s 82ms/step - loss: 0.5245 - accuracy: 0.7442 - val_loss: 0.5209 - val_accuracy: 0.7418\n",
+            "Epoch 3/10\n",
+            "782/782 [==============================] - 64s 82ms/step - loss: 0.4714 - accuracy: 0.7777 - val_loss: 0.4864 - val_accuracy: 0.7606\n",
+            "Epoch 4/10\n",
+            "782/782 [==============================] - 65s 83ms/step - loss: 0.4373 - accuracy: 0.7990 - val_loss: 0.4660 - val_accuracy: 0.7762\n",
+            "Epoch 5/10\n",
+            "782/782 [==============================] - 65s 83ms/step - loss: 0.4084 - accuracy: 0.8174 - val_loss: 0.4388 - val_accuracy: 0.7956\n",
+            "Epoch 6/10\n",
+            "782/782 [==============================] - 65s 83ms/step - loss: 0.3833 - accuracy: 0.8333 - val_loss: 0.4499 - val_accuracy: 0.7939\n",
+            "Epoch 7/10\n",
+            "782/782 [==============================] - 65s 83ms/step - loss: 0.3653 - accuracy: 0.8412 - val_loss: 0.4144 - val_accuracy: 0.8072\n",
+            "Epoch 8/10\n",
+            "782/782 [==============================] - 64s 82ms/step - loss: 0.3528 - accuracy: 0.8496 - val_loss: 0.4020 - val_accuracy: 0.8162\n",
+            "Epoch 9/10\n",
+            "782/782 [==============================] - 65s 83ms/step - loss: 0.3422 - accuracy: 0.8543 - val_loss: 0.4007 - val_accuracy: 0.8168\n",
+            "Epoch 10/10\n",
+            "782/782 [==============================] - 65s 84ms/step - loss: 0.3334 - accuracy: 0.8591 - val_loss: 0.3895 - val_accuracy: 0.8240\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f06902b0610>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ],
       "source": [
         "model_rnn.fit(x_train, y_train,\n",
         "          batch_size=batch_size,\n",
@@ -535,11 +615,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
-        "id": "q_zVIgS58OSR"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "q_zVIgS58OSR",
+        "outputId": "1067e0f9-e7c8-4e83-9af1-7b37f8907375"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "782/782 [==============================] - 65s 83ms/step - loss: 0.3257 - accuracy: 0.8618 - val_loss: 0.3849 - val_accuracy: 0.8269\n",
+            "Epoch 2/10\n",
+            "782/782 [==============================] - 65s 83ms/step - loss: 0.3185 - accuracy: 0.8646 - val_loss: 0.3802 - val_accuracy: 0.8295\n",
+            "Epoch 3/10\n",
+            "782/782 [==============================] - 65s 83ms/step - loss: 0.3126 - accuracy: 0.8673 - val_loss: 0.3753 - val_accuracy: 0.8310\n",
+            "Epoch 4/10\n",
+            "782/782 [==============================] - 65s 83ms/step - loss: 0.3076 - accuracy: 0.8708 - val_loss: 0.3724 - val_accuracy: 0.8315\n",
+            "Epoch 5/10\n",
+            "782/782 [==============================] - 65s 83ms/step - loss: 0.3024 - accuracy: 0.8724 - val_loss: 0.3724 - val_accuracy: 0.8321\n",
+            "Epoch 6/10\n",
+            "782/782 [==============================] - 69s 89ms/step - loss: 0.2990 - accuracy: 0.8744 - val_loss: 0.3752 - val_accuracy: 0.8318\n",
+            "Epoch 7/10\n",
+            "782/782 [==============================] - 65s 83ms/step - loss: 0.2952 - accuracy: 0.8764 - val_loss: 0.3718 - val_accuracy: 0.8344\n",
+            "Epoch 8/10\n",
+            "782/782 [==============================] - 65s 83ms/step - loss: 0.2915 - accuracy: 0.8780 - val_loss: 0.3711 - val_accuracy: 0.8359\n",
+            "Epoch 9/10\n",
+            "782/782 [==============================] - 65s 83ms/step - loss: 0.2887 - accuracy: 0.8793 - val_loss: 0.3707 - val_accuracy: 0.8370\n",
+            "Epoch 10/10\n",
+            "782/782 [==============================] - 65s 83ms/step - loss: 0.2861 - accuracy: 0.8797 - val_loss: 0.3715 - val_accuracy: 0.8373\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f068b5e8b10>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ],
       "source": [
         "# Out of curiosity, run for 10 more epochs\n",
         "model_rnn.fit(x_train, y_train,\n",
