--- a/Deep Learning and Reinforcement Learning/Week 6/05i_DEMO_Reinforcement.ipynb
+++ b/Deep Learning and Reinforcement Learning/Week 6/05i_DEMO_Reinforcement.ipynb
@@ -1048,10 +1048,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "ec5c1df393950c85460aac6c5f0d47d5950fe7c815f51de48caa93a009ae0140"
+  },
   "kernelspec": {
-   "display_name": "metis",
+   "display_name": "Python 3.7.13 ('kaggle-nlp')",
    "language": "python",
-   "name": "metis"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1063,7 +1066,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
