--- a/Deep Learning and Reinforcement Learning/Final Assignment/Submission.ipynb
+++ b/Deep Learning and Reinforcement Learning/Final Assignment/Submission.ipynb
@@ -927,11 +927,11 @@
         "plot_graph(inception_history)"
       ],
       "metadata": {
-        "id": "cFkp-qmdJY6d",
-        "outputId": "9532bf75-901e-4732-b96a-18e791cb4935",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cFkp-qmdJY6d",
+        "outputId": "9532bf75-901e-4732-b96a-18e791cb4935"
       },
       "execution_count": null,
       "outputs": [
@@ -997,10 +997,51 @@
             "Epoch 28/100\n",
             "50/50 [==============================] - 11s 220ms/step - loss: 0.0312 - accuracy: 0.9878 - val_loss: 0.7856 - val_accuracy: 0.9250\n",
             "Epoch 29/100\n",
-            "50/50 [==============================] - 12s 243ms/step - loss: 0.0606 - accuracy: 0.9868 - val_loss: 0.6505 - val_accuracy: 0.9333\n"
+            "50/50 [==============================] - 12s 243ms/step - loss: 0.0606 - accuracy: 0.9868 - val_loss: 0.6505 - val_accuracy: 0.9333\n",
+            "Epoch 30/100\n",
+            "50/50 [==============================] - 12s 230ms/step - loss: 0.0631 - accuracy: 0.9828 - val_loss: 0.3990 - val_accuracy: 0.9500\n",
+            "Epoch 31/100\n",
+            "50/50 [==============================] - 11s 222ms/step - loss: 0.0491 - accuracy: 0.9858 - val_loss: 0.2587 - val_accuracy: 0.9583\n",
+            "Epoch 32/100\n",
+            "50/50 [==============================] - 11s 223ms/step - loss: 0.0438 - accuracy: 0.9848 - val_loss: 0.2788 - val_accuracy: 0.9750\n",
+            "Epoch 33/100\n",
+            "50/50 [==============================] - 11s 220ms/step - loss: 0.0367 - accuracy: 0.9899 - val_loss: 0.0419 - val_accuracy: 0.9750\n",
+            "Epoch 34/100\n",
+            "50/50 [==============================] - 11s 219ms/step - loss: 0.0566 - accuracy: 0.9807 - val_loss: 0.4132 - val_accuracy: 0.9583\n",
+            "Epoch 35/100\n",
+            "50/50 [==============================] - 11s 224ms/step - loss: 0.0245 - accuracy: 0.9899 - val_loss: 1.5951 - val_accuracy: 0.8667\n",
+            "Epoch 36/100\n",
+            "50/50 [==============================] - 11s 223ms/step - loss: 0.0527 - accuracy: 0.9899 - val_loss: 0.7659 - val_accuracy: 0.9500\n",
+            "Epoch 37/100\n",
+            "50/50 [==============================] - 11s 227ms/step - loss: 0.0384 - accuracy: 0.9919 - val_loss: 0.5664 - val_accuracy: 0.9417\n",
+            "Epoch 38/100\n",
+            "49/50 [============================>.] - ETA: 0s - loss: 0.0518 - accuracy: 0.9845"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Final Model Selection - Key findings\n",
+        "\n",
+        "* With 3 different model we exerimented, Inception baed model outperformed other 2 models.\n",
+        "* VGG16 seems very light and faster to train compared to InceptionV3 model\n",
+        "* InceptionV3 converged fatster compared to VGG16\n",
+        "* Our plain custom model didnt converge"
+      ],
+      "metadata": {
+        "id": "I60W2EG7UuaY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Possible Flaws and Potential improvement\n"
+      ],
+      "metadata": {
+        "id": "EJ4f2yKHVP5I"
+      }
     },
     {
       "cell_type": "code",
