--- a/Deep Learning and Reinforcement Learning/Final Assignment/Submission.ipynb
+++ b/Deep Learning and Reinforcement Learning/Final Assignment/Submission.ipynb
@@ -20,8 +20,9 @@
         "\n",
         "## Problem Definition - Main Objective\n",
         "\n",
-        "Company XYZ would like to build a Deep Learning model to classify horse vs human images. The images are of horses and humans, and the classification task is to predict whether the image is a horse or a human.\n",
-        "With pre-trained models like InceptionV3, the model can be trained to classify images."
+        "Company XYZ would like to build a Deep Learning model to classify horse vs human images. \n",
+        "\n",
+        "With pre-trained models like InceptionV3 or VGG16, the model can be trained faster with Transfer Learning."
       ]
     },
     {
